# DS

./: .gitignore  Hw1.ipynb  Hw1_vsc.ipynb  README.md  colormaps.ipynb  colors.py  pyproject.toml
GPU/: test_GPU.ipynb
HW_01/: Hw1.ipynb  Hw1_vsc.ipynb
HW_02/: Hw2.1.ipynb  Hw2.2.ipynb  Hw2.3.ipynb
HW_03/: hw3.ipynb
HW_04/: hw4.ipynb
HW_05/: hw5.ipynb
HW_06/: hw6.ipynb
HW_07/: hw7.ipynb  hw7_star_plus.ipynb
HW_08/: hw8.ipynb
HW_09/: hw9.ipynb
HW_10/: hw10.ipynb  hw10_part_2.ipynb
HW_11/: hw11 search.ipynb  hw11 testing.ipynb  hw11.ipynb
HW_12/: hw12.ipynb
icecream/: Init.ipynb  Notebook 1.ipynb  icecream.ipynb  icecream_demo.py
icecream/.deepnote/: id-resolver.json
