[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["KyryloChalov <ks7977166@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.13.1"
lxml = "^5.2.1"
scikit-learn = "^1.2.2"
scipy = "^1.11.4"
tqdm = "^4.66.4"
colorspacious = "^1.1.2"
mlxtend = "^0.23.1"
surprise = "^0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
