[tool.poetry]
name = "ds"
version = "0.1.0"
description = ""
authors = ["KyryloChalov <ks7977166@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.25.2"
jupyter = "^1.0.0"
matplotlib = "^3.7.1"
seaborn = "^0.13.1"
lxml = "^5.2.1"
scikit-learn = "^1.2.2"
scipy = "^1.11.4"
tqdm = "^4.66.4"
colorspacious = "^1.1.2"
mlxtend = "^0.23.1"
surprise = "^0.1"
tensorflow = "^2.16.1"
keras = "^3.3.3"
tf-keras = "^2.16.0"
pydot = "^2.0.0"
icecream = "^2.1.3"
spacy = "^3.7.5"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
